index_temp.css
/* ... */
.pilars-subcontainer-1{
    flex: 1;
    margin-left: clamp(1.5rem, 8vw, 13rem);
}

.pilars-subcontainer-2{
    background-color: var(--secondary-color);

    height: clamp(5rem, 12vw, 13rem);
    width: clamp(14rem, 22vw, 26rem);
    margin-right: clamp(1.5rem, 7vw, 11rem);

    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: clamp(12px, 2vw, 20px);

}

.pilars-subcontainer-2 h1{
    color: var(--primary-color);
    font-size: clamp(1.2rem, 2.5vw, 3rem);
    text-align: center;
} 

/* ==================================== */
.pilars-container-2{
    height: clamp(220px, 40vw, 50vh);
    width: min(90%, 1200px);

    display: flex;
    align-items: center;
    justify-content: center;

    background-image: url("./asset/academically-commited-image-bg.png");
    background-size: cover;
    background-position: 50% 50%;

    border-radius: clamp(12px, 2vw, 20px);
}

.pilars-2-subcontainer-1{
    flex: 1;
    margin-left: clamp(1.5rem, 8vw, 13rem);
}

.pilars-2-subcontainer-2{
    background-color: var(--secondary-color);

    height: clamp(5rem, 12vw, 13rem);
    width: clamp(14rem, 22vw, 26rem);
    margin-right: clamp(1.5rem, 7vw, 11rem);

    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: clamp(12px, 2vw, 20px);

}

.pilars-2-subcontainer-2 h1{
    color: var(--primary-color);
    font-size: clamp(1.2rem, 2.5vw, 3rem);
    text-align: center;
}    

/* ==================================== */
.pilars-container-3{
    height: clamp(220px, 40vw, 50vh);
    width: min(90%, 1200px);

    display: flex;
    align-items: center;
    justify-content: center;

    background-image: url("./asset/legally-skilled-image-bg.png");
    background-size: cover;
    background-position: 50% 50%;

    border-radius: clamp(12px, 2vw, 20px);
}

.pilars-3-subcontainer-1{
    flex: 1;
    margin-left: clamp(1.5rem, 8vw, 13rem);
}

.pilars-3-subcontainer-2{
    background-color: var(--secondary-color);

    height: clamp(5rem, 12vw, 13rem);
    width: clamp(14rem, 22vw, 26rem);
    margin-right: clamp(1.5rem, 7vw, 11rem);

    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: clamp(12px, 2vw, 20px);

}

.pilars-3-subcontainer-2 h1{
    color: var(--primary-color);
    font-size: clamp(1.2rem, 2.5vw, 3rem);
    text-align: center;
}    

/* ==================================== */
.pilars-container-4{
    height: clamp(220px, 40vw, 50vh);
    width: min(90%, 1200px);

    display: flex;
    align-items: center;
    justify-content: center;

    background-image: url("./asset/socially-responsible-image-bg.png");
    background-size: cover;
    
    border-radius: clamp(12px, 2vw, 20px);
}

.pilars-4-subcontainer-1{
    flex: 1;
    margin-left: clamp(1.5rem, 8vw, 13rem);
}

.pilars-4-subcontainer-2{
    background-color: var(--secondary-color);

    height: clamp(5rem, 12vw, 13rem);
    width: clamp(14rem, 22vw, 26rem);
    margin-right: clamp(1.5rem, 7vw, 11rem);

    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: clamp(12px, 2vw, 20px);

}

.pilars-4-subcontainer-2 h1{
    color: var(--primary-color);
    font-size: clamp(1.2rem, 2.5vw, 3rem);
    text-align: center;
}    


/*================================================================================================================*/

.visi-misi{
    height: max-content;
    min-height: 100vh;
    width: 100%;
    background-color: var(--primary-color);
}


.visi-misi-container-1{

    margin-top: 0rem;
    display: flex;
    /* flex-direction: row-reverse; */
    justify-content: flex-start;
    flex-wrap: wrap;

    background-color: var(--primary-color);
}

.visi-title{
    color: var(--secondary-color);
    font-size: clamp(2.5rem, 8vw, 6.25rem);
    text-align: left;

    /* margin-top: clamp(20px, 4vw, 60px); */
    /* margin-left: clamp(2rem, 14vw, 10rem);  */
    margin-left: 10vw;
}

.visi-content{
    color: var(--secondary-color);
    font-size: clamp(1rem, 2vw, 1.875rem);
    text-align: justify;
    
    
    margin: 0
    /* clamp(1.5rem, 12vw, 9rem)  */
    11vw 
    clamp(2rem, 8vw, 11rem) 
    /* clamp(1.5rem, 12vw, 7rem); */
    11vw;
}

.visi-misi-container-2{
    /* margin-top: 2rem; */
    display: flex;
    /* flex-direction: row-reverse; */
    justify-content: flex-start;
    flex-wrap: wrap;
    
    background-color: var(--secondary-color);
}

.misi-title{
    color: var(--primary-color);
    font-size: clamp(2.5rem, 8vw, 6.25rem);
    text-align: left;
    
    margin-left: 10vw;
    /* margin-top: clamp(20px, 3vw, 40px);
    margin-right: clamp(1rem, 5vw, 7rem); */
}

.misi-content{
    color: var(--primary-color);
    font-size: clamp(1rem, 2vw, 1.875rem);
    text-align: justify;

    /* margin-top: clamp(2rem, 8vw, 11rem); */
    /* margin-right: clamp(1.5rem, 11vw, 5rem);
    margin-left: clamp(1.5rem, 11vw, 7rem); */

    margin: 0
            /* clamp(1.5rem, 12vw, 9rem)  */
            11vw 
            clamp(2rem, 8vw, 11rem) 
            /* clamp(1.5rem, 12vw, 7rem); */
            11vw;
}


/*====================================================================================================================*/

.event-preview{
    min-height: 100vh;
    width: 100%;

    display: flex;
    flex-direction: column;
    align-items: center;

    background-color: var(--secondary-color);
}

.event-preview h1{
    color: var(--primary-color);
    font-size: clamp(2.5rem, 8vw, 6.25rem);
    margin-top: clamp(24px, 4vw, 60px);
}

.event-container{
    width: min(90%, 1100px);
    height: 60%;
    position: relative;
    display: flex;
    justify-content: center;

    /* tambahan */
    align-items: center;

    border: 5px solid var(--primary-color);
    border-radius: 20px;
}

/* tambahan sementara */

.event-container h1{
        font-size: min(7vw, 50px);
}

.eventSlides{
    display: none;  
}
/* ... */

